--- a/src/app/pages/newpartida/newpartida.page.html
+++ b/src/app/pages/newpartida/newpartida.page.html
@@ -1,44 +1,49 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>newpartida</ion-title>
-  </ion-toolbar>
+<ion-header translucent>
+  <ion-toolbar color="primary">
+   <ion-buttons slot="start">
+     <ion-back-button defaultHref="/main/usuarios"></ion-back-button>
+   </ion-buttons>
+
+   <ion-title class="ion-text-center">Nuevo Partido</ion-title>
+ </ion-toolbar>
 </ion-header>
 
 <ion-content padding="true">
-  <ion-card>
-    <form (ngSubmit)="addPartida($event)">
-      <ion-card-header>
-        <ion-card-title class="ion-text-center">Crea tu partida</ion-card-title> 
-      </ion-card-header>
 
+  <ion-card>
+    
+      <ion-card-header>
+        <!--ion-card-title class="ion-text-center">Crea tu partida</ion-card-title--> 
+      </ion-card-header>
 
       <ion-card-content>
         <ion-list>
-          <!-- <ion-item lines="none">
-            <ion-checkbox color="primary" slot="start" [(ngModel)]="listaTorneosFlags[0]" [ngModelOptions]="{standalone: true}"></ion-checkbox>
-            <ion-col><ion-label>Ubicación:</ion-label></ion-col>
-            <ion-col>Aquí irá el Mapa</ion-col>
-            <ion-col><ion-input type="number" min="0" formControlName="radio"></ion-input></ion-col>
-          </ion-item> -->
+          <ion-list-header><strong>Participantes:</strong></ion-list-header>
 
           <ion-item lines="none">
-            <ion-col><ion-label>Organizador</ion-label></ion-col>
+            <!--ion-col><ion-label>Organizador</ion-label></ion-col-->
             <ion-col>
-              <ion-input class= "inp" type="text" name="organizador" value= {{organizador}} readonly=readonly></ion-input>
+              <!--ion-input class= "inp" type="text" name="organizador" value= {{organizador}} readonly=readonly></ion-input-->
+              <ion-chip>{{this.usuarioLogueado.username}}</ion-chip>
             </ion-col>
           </ion-item>
 
-          <ion-item lines="none">
-            <ion-col><ion-label>Invitado</ion-label></ion-col>
+          <ion-item lines="none" *ngFor="let invitado of this.invitados">
+            <!--ion-col><ion-label>Invitado</ion-label></ion-col-->
             <ion-col>
-              <ion-input class= "inp" type="text" name="invitado"  value= {{invitado[0]}} readonly=readonly></ion-input>
+              <!--ion-input class= "inp" type="text" name="invitado"  value= {{invitados[0]}} readonly=readonly></ion-input-->
+              <ion-chip>{{invitado}}</ion-chip>
             </ion-col>
+          </ion-item>
+
+          <ion-item>
+            <ion-button color="success" fill="clear"><ion-icon slot="icon-only" name="add"></ion-icon></ion-button>
           </ion-item>
 
           <ion-item lines="none">
             <ion-col><ion-label>Modo</ion-label></ion-col>
             <ion-col>
-              <ion-segment value="i" (ionChange)="modoSegmentChanged($event)" [(ngModel)]="modo" name = "modo">
+              <ion-segment value="i" (ionChange)="modoSegmentChanged($event)">
                 <ion-segment-button value="i">
                   <ion-label>(I)ndividuales</ion-label>
                 </ion-segment-button>
@@ -48,26 +53,22 @@
               </ion-segment>
             </ion-col>
           </ion-item>
+
         </ion-list>
 
-        <div>
-          <ion-row class="ion-justify-content-center">
-              <ion-button size="large" color="tertiary" type="submit" fill="outline">Crea Partida</ion-button>
-          </ion-row>
-        </div>
-
-
       </ion-card-content>
-    </form>
-
-    <div>
-      <h3>Partidas de {{organizador}}</h3>
-      <ion-item *ngFor="let partida of listapartidas">
-        <ion-label>Organizada por: {{partida.organizador}}</ion-label>
-      </ion-item>
-    </div>
 
   </ion-card>
+
+  <div id="mapid2" class="mapa"></div>
+
+  <div id="boton">
+    <ion-button size="large" expand="block" color="success" (click)="addPartida($event)">Crear / Invitar</ion-button>
+    <!--ion-button size="large" color="success" type="submit">Invitar a los jugadores</ion-button-->
+  </div>
+
+
+  
   
 
 </ion-content>
