--- a/src/app/pages/partidas/partidas.page.html
+++ b/src/app/pages/partidas/partidas.page.html
@@ -22,23 +22,21 @@
             </div>
         </ion-label>
         
-        <div *ngIf="partida.ganador == 'encurso'">
-        <ion-item>
-            <ion-select  [(ngModel)]="ganador" placeholder="Seleccionar ganador"(ionChange)="detGanador(i)">
-              <ion-select-option [value]=partida.organizador>{{partida.organizador}}</ion-select-option>
-              <ion-select-option *ngFor="let jugador of partida.invitado"   [value] =jugador  checked="false">{{jugador}}</ion-select-option>
-              <!-- <ion-select-option value="Hierba">Hierba</ion-select-option>
-              <ion-select-option value="Greenset">Greenset</ion-select-option>
-              <ion-select-option value="Detourf">Detourf</ion-select-option>
-              <ion-select-option value="Plexicushion">Plexicushion</ion-select-option>
-              <ion-select-option value="Rapida">Rápida</ion-select-option> -->
-            </ion-select>
-        
+          <ion-item>
+              <ion-select  [(ngModel)]="ganador" placeholder="Seleccionar ganador"(ionChange)="detGanador(i)">
+                <ion-select-option [value]=partida.organizador>{{partida.organizador}}</ion-select-option>
+                <ion-select-option *ngFor="let jugador of partida.invitados" [value] = "jugador" checked="false">{{jugador}}</ion-select-option>
+                <!-- <ion-select-option value="Hierba">Hierba</ion-select-option>
+                <ion-select-option value="Greenset">Greenset</ion-select-option>
+                <ion-select-option value="Detourf">Detourf</ion-select-option>
+                <ion-select-option value="Plexicushion">Plexicushion</ion-select-option>
+                <ion-select-option value="Rapida">Rápida</ion-select-option> -->
+              </ion-select>
           </ion-item>
-        <!-- <ion-button class= "det" fill="outline">
-          Introduce al ganador de la partida
-        </ion-button> -->
-      </div>
+          <!-- <ion-button class= "det" fill="outline">
+            Introduce al ganador de la partida
+          </ion-button> -->
+
       </ion-item>
     </ion-list>
     
