--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -5,6 +5,12 @@
       <ion-menu-button auto-hide="false"></ion-menu-button>
     </ion-buttons>
 
+    <ion-buttons slot="end">
+      <ion-button (click)="goEditFacebook()" id="fbLogo" size="large">
+        <ion-icon slot="icon-only" name="logo-facebook"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
     <ion-title class="ion-text-center">Editar perfil</ion-title>
   </ion-toolbar>
 
@@ -12,171 +18,160 @@
 
 <ion-content>
 
-  <div class="ion-justify-content-center">
+  <!--div class="ion-justify-content-center">
     <ion-label> Edita tus datos aquí si te registrarset con Facebook   </ion-label>
-    <ion-button class="facebooklabel" (click)="goEditFacebook()" >
-      <ion-icon name="logo-facebook" ></ion-icon>
+    <ion-button class="facebooklabel" (click)="" >
+      <ion-icon name="" ></ion-icon>
        Edita</ion-button>
-  </div>
+  </div-->
+  <ion-row>
+    <ion-col size="12">
+      <ion-card id="card">
+        <ion-card-content>
+          <ion-row>
+            <ion-col size="4" size-xs="12" size-sm="6" size-md="4" size-sm="2">
+              <input type = "file" class=d-none (change)="onPhotoSelected($event)" required #photoInput>
+              <img [src] ="photoSelected || 'assets/default.png'" width="400px" class="img-fluid" (click)="photoInput.click()">
+            </ion-col>
 
-  <ion-card>
-    <form [formGroup]="editperfilForm" (ngSubmit)="updatePerfil($event2)">
-    <ion-grid>
-      <ion-row class="ion-justify-content-center">
-        <ion-col class="ion-align-self-center" size-lg="11" size-xs="12">
+            <ion-col size="8" size-xs="12" size-sm="4" size-md="8">
+              <form [formGroup]="editperfilForm" (ngSubmit)="updatePerfil($event2)">
+              <ion-grid>
 
-            <ion-list>
-              <div class="formGroup">
-                <input type = "file" class=d-none (change)="onPhotoSelected($event)" required #photoInput>
-                <img [src] ="photoSelected || 'assets/c12139b9-196e-4ee3-beb5-ce0438932898.png'" width="200px" class="img-fluid" (click)="photoInput.click()">
+                <!--ion-row class="ion-justify-content-center">
+                  <ion-col class="ion-align-self-center" size-lg="11" size-xs="12"-->
 
-                <ion-item lines="none">
-                  <ion-input  formControlName="pass1" type="password" name="pass1" placeholder="Your active password" [(ngModel)]="pass1"></ion-input>
-                  <div *ngIf="editperfilForm.controls['pass1'].valid">
-                    <a class="success">&#9989;</a>
-                  </div>
-                </ion-item>
-                <div class="validation-errors">
-                  <ng-container *ngFor="let validation of validation_messages.pass1" >
-                    <div *ngIf="editperfilForm.get('pass1').hasError(validation.type) && (editperfilForm.get('pass1').dirty || editperfilForm.get('pass1').touched)">
-                      <div class="danger">
-                        {{ validation.message }}
+                <ion-list>
+                  <div class="formGroup">
+
+                    <ion-item lines="none">
+                      <ion-input  formControlName="pass1" type="password" name="pass1" placeholder="Your active password" [(ngModel)]="pass1"></ion-input>
+                      <div *ngIf="editperfilForm.controls['pass1'].valid">
+                        <a class="success">&#9989;</a>
                       </div>
-                    </div>
-                  </ng-container>
-                </div>
-              </div>
-
-                <div class="formGroup">
-                  <ion-item lines="none">
-                    <ion-input  formControlName="difpass" type="password" name="difpass" placeholder="Your NEW password or if you dont want to change put the old password" [(ngModel)]="difpass"></ion-input>
-                    <div *ngIf="editperfilForm.controls['difpass'].valid">
-                      <a class="success">&#9989;</a>
-                    </div>
-                  </ion-item>
-                  <div class="validation-errors">
-                    <ng-container *ngFor="let validation of validation_messages.difpass" >
-                      <div *ngIf="editperfilForm.get('difpass').hasError(validation.type) && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
-                        <div class="danger">
-                          {{ validation.message }}
+                    </ion-item>
+                    <div class="validation-errors">
+                      <ng-container *ngFor="let validation of validation_messages.pass1" >
+                        <div *ngIf="editperfilForm.get('pass1').hasError(validation.type) && (editperfilForm.get('pass1').dirty || editperfilForm.get('pass1').touched)">
+                          <div class="danger">
+                            {{ validation.message }}
+                          </div>
                         </div>
-                      </div>
-                    </ng-container>
-                  </div>
-                </div>
-  
-              <!-- <div class="formGroup">  // si queremos obligar a que las contraseñas sean iguales
-                <ion-item>
-                  <ion-input formControlName="difpass" type="password" name="difpass" placeholder="Your NEW password" [(ngModel)]="difpass"></ion-input>
-                  <div *ngIf="editperfilForm.controls['difpass'].valid && !editperfilForm.hasError('passwordNotMatch')">
-                    <a color="success">&#9989;</a>
-                  </div>
-                </ion-item>
-                <div class="validation-errors">
-                  <ng-container *ngFor="let validation of validation_messages.difpass" >
-                    <div *ngIf="editperfilForm.get('difpass').hasError(validation.type) && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
-                      <div class="danger">
-                        {{ validation.message }}
-                      </div>
+                      </ng-container>
                     </div>
-                  </ng-container>
-                  <div class="error-message" *ngIf="!editperfilForm.get('difpass').errors && editperfilForm.hasError('passwordNotMatch') && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
-                    <div class="danger">Las contraseñas coinciden, cambialas</div>
                   </div>
-                </div>
-              </div> -->
 
-              <div class="formGroup">
-                <ion-item lines="none">
-                  <ion-input  formControlName="mail" type="text" name="mail" placeholder="Mail" value={{mail}} [(ngModel)]="mail"></ion-input>
-                  <div *ngIf="editperfilForm.controls['mail'].valid">
-                    <a class="success">&#9989;</a>
+                  <div class="formGroup">
+                    <ion-item lines="none">
+                      <ion-input  formControlName="difpass" type="password" name="difpass" placeholder="Your NEW password or if you dont want to change put the old password" [(ngModel)]="difpass"></ion-input>
+                      <div *ngIf="editperfilForm.controls['difpass'].valid">
+                        <a class="success">&#9989;</a>
+                      </div>
+                    </ion-item>
+                    <div class="validation-errors">
+                      <ng-container *ngFor="let validation of validation_messages.difpass" >
+                        <div *ngIf="editperfilForm.get('difpass').hasError(validation.type) && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
+                          <div class="danger">
+                            {{ validation.message }}
+                          </div>
+                        </div>
+                      </ng-container>
+                    </div>
                   </div>
-                </ion-item>
-                <div class="validation-errors">
-                  <ng-container *ngFor="let validation of validation_messages.mail" >
-                    <div *ngIf="editperfilForm.get('mail').hasError(validation.type) && (editperfilForm.get('mail').dirty || editperfilForm.get('mail').touched)">
-                      <div class="danger">
-                        {{ validation.message }}
+      
+                  <!-- <div class="formGroup">  // si queremos obligar a que las contraseñas sean iguales
+                    <ion-item>
+                      <ion-input formControlName="difpass" type="password" name="difpass" placeholder="Your NEW password" [(ngModel)]="difpass"></ion-input>
+                      <div *ngIf="editperfilForm.controls['difpass'].valid && !editperfilForm.hasError('passwordNotMatch')">
+                        <a color="success">&#9989;</a>
+                      </div>
+                    </ion-item>
+                    <div class="validation-errors">
+                      <ng-container *ngFor="let validation of validation_messages.difpass" >
+                        <div *ngIf="editperfilForm.get('difpass').hasError(validation.type) && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
+                          <div class="danger">
+                            {{ validation.message }}
+                          </div>
+                        </div>
+                      </ng-container>
+                      <div class="error-message" *ngIf="!editperfilForm.get('difpass').errors && editperfilForm.hasError('passwordNotMatch') && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
+                        <div class="danger">Las contraseñas coinciden, cambialas</div>
                       </div>
                     </div>
-                  </ng-container>
-                </div>
-              </div>
-  
-              <div class="formGroup">
-                <ion-item lines="none">
-                  <ion-input  formControlName="sexo" type="text" name="sexo" placeholder="Sexo" value={{user.sexo}} [(ngModel)]="sexo" ></ion-input>
-                  <div *ngIf="editperfilForm.controls['sexo'].valid">
-                    <a class="success">&#9989;</a>
-                  </div>
-                </ion-item>
-                <div class="validation-errors">
-                  <ng-container *ngFor="let validation of validation_messages.sexo" >
-                    <div *ngIf="editperfilForm.get('sexo').hasError(validation.type) && (editperfilForm.get('sexo').dirty || editperfilForm.get('sexo').touched)">
-                      <div class="danger">
-                        {{ validation.message }}
-                      </div>
-                    </div>
-                  </ng-container>
-                </div>
-              </div>
-  
-              <!--div class="formGroup">
-                <ion-item lines="none">              
-                  <ion-input  formControlName="ubicacion" type="text" name="ubicacion" placeholder="Ubicacion" value={{user.ubicacion}} [(ngModel)]="ubicacion" ></ion-input>
-                  <div *ngIf="editperfilForm.controls['ubicacion'].valid">
-                    <a class="success">&#9989;</a>
-                  </div>
-                </ion-item>
-                <div class="validation-errors">
-                  <ng-container *ngFor="let validation of validation_messages.ubicacion" >
-                    <div *ngIf="editperfilForm.get('ubicacion').hasError(validation.type) && (editperfilForm.get('ubicacion').dirty || editperfilForm.get('ubicacion').touched)">
-                      <div class="danger">
-                        {{ validation.message }}
-                      </div>
-                    </div>
-                  </ng-container>
-                </div>
-              </div-->
-  
-              <div class="formGroup">
-                <ion-item lines="none">
-                  <ion-input  formControlName="edad" type="text" name="edad" placeholder="Edad" value={{user.edad}} [(ngModel)]="edad"></ion-input>
-                  <div *ngIf="editperfilForm.controls['edad'].valid">
-                    <a class="success">&#9989;</a>
-                  </div>
-                </ion-item>
-                <div class="validation-errors">
-                  <ng-container *ngFor="let validation of validation_messages.edad" >
-                    <div *ngIf="editperfilForm.get('edad').hasError(validation.type) && (editperfilForm.get('edad').dirty || editperfilForm.get('edad').touched)">
-                      <div class="danger">
-                        {{ validation.message }}
-                      </div>
-                    </div>
-                  </ng-container>
-                </div>
-              </div>
+                  </div> -->
 
-              <ion-item lines="none">
-                Guardar ubicación actual
-                <ion-button slot="end" *ngIf="locationSelected" color="success" fill="solid" size="default" (click)="toggleLocationSelected()"><ion-icon name="location-outline" slot="icon-only"></ion-icon></ion-button>
-                <ion-button slot="end" *ngIf="!locationSelected" color="success" fill="outline" size="default" (click)="toggleLocationSelected()"><ion-icon name="location-outline" slot="icon-only"></ion-icon></ion-button> 
-              </ion-item> 
-           
-            <br>   
-            </ion-list>
-            
-          <div class="ion-justify-content-center">
-            <ion-row class="ion-justify-content-center">
-              <ion-button color="tertiary" size="large" type="submit" [disabled]="editperfilForm.invalid">ACTUALIZAR</ion-button>
-            </ion-row>
-          </div>
+                  <div class="formGroup">
+                    <ion-item lines="none">
+                      <ion-input  formControlName="mail" type="text" name="mail" placeholder="Mail" value={{mail}} [(ngModel)]="mail"></ion-input>
+                      <div *ngIf="editperfilForm.controls['mail'].valid">
+                        <a class="success">&#9989;</a>
+                      </div>
+                    </ion-item>
+                    <div class="validation-errors">
+                      <ng-container *ngFor="let validation of validation_messages.mail" >
+                        <div *ngIf="editperfilForm.get('mail').hasError(validation.type) && (editperfilForm.get('mail').dirty || editperfilForm.get('mail').touched)">
+                          <div class="danger">
+                            {{ validation.message }}
+                          </div>
+                        </div>
+                      </ng-container>
+                    </div>
+                  </div>
+      
+                  <div class="formGroup">
+                    <ion-item lines="none">
+                      <ion-input  formControlName="sexo" type="text" name="sexo" placeholder="Sexo" value={{user.sexo}} [(ngModel)]="sexo" ></ion-input>
+                      <div *ngIf="editperfilForm.controls['sexo'].valid">
+                        <a class="success">&#9989;</a>
+                      </div>
+                    </ion-item>
+                    <div class="validation-errors">
+                      <ng-container *ngFor="let validation of validation_messages.sexo" >
+                        <div *ngIf="editperfilForm.get('sexo').hasError(validation.type) && (editperfilForm.get('sexo').dirty || editperfilForm.get('sexo').touched)">
+                          <div class="danger">
+                            {{ validation.message }}
+                          </div>
+                        </div>
+                      </ng-container>
+                    </div>
+                  </div>
+      
+                  <div class="formGroup">
+                    <ion-item lines="none">
+                      <ion-input  formControlName="edad" type="text" name="edad" placeholder="Edad" value={{user.edad}} [(ngModel)]="edad"></ion-input>
+                      <div *ngIf="editperfilForm.controls['edad'].valid">
+                        <a class="success">&#9989;</a>
+                      </div>
+                    </ion-item>
+                    <div class="validation-errors">
+                      <ng-container *ngFor="let validation of validation_messages.edad" >
+                        <div *ngIf="editperfilForm.get('edad').hasError(validation.type) && (editperfilForm.get('edad').dirty || editperfilForm.get('edad').touched)">
+                          <div class="danger">
+                            {{ validation.message }}
+                          </div>
+                        </div>
+                      </ng-container>
+                    </div>
+                  </div>
 
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </form>
-  </ion-card>
+                  <ion-item lines="none">
+                    Guardar ubicación actual
+                    <ion-button slot="end" *ngIf="locationSelected" color="success" fill="solid" size="default" (click)="toggleLocationSelected()"><ion-icon name="location-outline" slot="icon-only"></ion-icon></ion-button>
+                    <ion-button slot="end" *ngIf="!locationSelected" color="success" fill="outline" size="default" (click)="toggleLocationSelected()"><ion-icon name="location-outline" slot="icon-only"></ion-icon></ion-button> 
+                  </ion-item> 
+              
+                <br>   
+                </ion-list>
+                
+                <ion-button expand="block" type="submit" [disabled]="editperfilForm.invalid">Guardar Cambios</ion-button>
+
+              </ion-grid>
+              </form>
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
+  </ion-row>
 
 </ion-content>
