--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -1,52 +1,3 @@
-/* .card{
-    height: 300px;
-    margin-top: auto;
-    margin-bottom: auto; 
-     width: 370px; 
-     background-color: rgba(0, 0, 0, 0.603) !important;
-    align-items: center; 
-    
-}
-
-.card-header h3{
-    color: red;
-    text-align: center;
-    
-}   */
-
-
-/* img{
-width: 250px;
- height: 400px; */
- 
-/* background-repeat: no-repeat; */ /*Para que la imagen no se repita */
-    /* background-position: 50%; */ /*Centrar la imagen en el contenedor*/
-    /*  border-radius: 50%; */  /*Hace el efecto de redondear el contenedor*/
- /*    background-size: 100% auto;  */
-
-/* } */
-
-
-///////////////////////////////////lo bueno
-/* .objetfit > img{
-    width: 600%;
-	max-width: 100%;
-	height: 100px;
-    object-fit: cover;
-    border-radius: 50%; 
-	background-color: black;
-    border: 3px solid #019fdd;
-
-} 
-
-.card-header {
-    text-align: center;
-}
-.card{
-    margin-top: 100px;
-    width: 400px;
-} */
-
 ion-avatar{
     width: 200px;
     height: 200px;
@@ -61,28 +12,34 @@ ion-card-title{
 }
 ion-avatar{
     display: flex;
-    margin:0 auto;    
+    margin:0 auto; 
+    vertical-align: middle;
+    margin-top: 32px;
+   
 }
 ion-card-content{
     background-color: white;
+
 } 
-/*ion-item{
-    margin-top:0px;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 0px;
-}*/
-
-/* ion-card{
-  width: 100%;
-} */
-
-#map {
-    position: relative;
-    height: inherit;
-    width: inherit;
+ion-item{
+    size: 20px;
 }
-/* #mapid{
-    height: 40%;
-    width: 40%;
-} */
+
+.ion-row{
+    display: flex;
+    flex-wrap: wrap;
+}
+.ion-avatar{
+    display: flex;
+    align-items: center;  
+}
+#mapid3{
+
+    height: 50%;
+    //width: 97%;
+    display: flex;
+    /* left: 50%; */
+    margin-left: 17px;
+    margin-right: 17px;
+    
+}
