--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -11,18 +11,21 @@
 </ion-header>
 
 
-<ion-content class="ion-padding" color="tertiary">
+<ion-content class="ion-padding">
           
-  <ion-card>
+  <ion-card id="card">
+    <ion-card-title>
+      Regístrate
+    </ion-card-title>
+    <ion-card-content>
     <form [formGroup]="registerForm" (ngSubmit)="registerUser($event)">
     <ion-grid>
       <ion-row class="ion-justify-content-center">
         <ion-col class="ion-align-self-center" size-lg="11" size-xs="12">
-          <div>
-            <h3>Crea una cuenta en Rackets4All</h3>
-          </div>
+          <!-- <div>
+            <h3>Crear una cuenta</h3>
+          </div> -->
           <ion-list>
-            
             <div class="formGroup">
               <ion-item>
                 <!-- <ion-label class="text">Username: </ion-label> -->
@@ -141,10 +144,10 @@
               </div>
             </div>
 
-            <!--div class="formGroup">
+            <!-- div class="formGroup">
               <ion-item>
                 <ion-label class="text">Ubicacion: </ion-label>
-                <ion-input formControlName="ubicacion" type="text" name="ubicacion" placeholder="Ciudad de residencia" [(ngModel)]="ubicacion" ></ion-input>
+                <ion-input formControlName="ubicacion" type="text" name="ubicacion" placeholder="Ciudad de residencia" [(ngModel)]="ubicacion"></ion-input>
                 <div *ngIf="registerForm.controls['ubicacion'].valid">
                   <a class="success">&#9989;</a>
                 </div>
@@ -164,13 +167,14 @@
           </ion-list>
             <div>
               <ion-row class="ion-justify-content-center">
-                <ion-button color="tertiary" size="large" type="submit" [disabled]="registerForm.invalid" fill="outline">REGISTRARSE</ion-button>
+                <ion-button size="large" type="submit" [disabled]="registerForm.invalid">REGISTRAR</ion-button>
               </ion-row>
             </div>
           </ion-col>
         </ion-row>
       </ion-grid>
     </form>
+  </ion-card-content>
   </ion-card>
 </ion-content>
 
