--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -1,62 +1,31 @@
-*{
-    margin: 0;
-    padding: 0;
-  }
+ion-card-title{
+  display: center;
+  align-self: center;
+  align-content: center;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 30px;  
+}
+
+
+#card{
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
   
-  body, html{
-    background: #fff;
-    //font-size: 16px;
-    color: #000;
-    font-family: monospace;
-    width: 100%;
-    height: 100%;
-  }
-
-.danger{
-    color: red;
 }
 
-ion-card {
-    display: flex;
-    flex-direction: column;
-    width: 720px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    --background: rgb(255, 255, 255);
-  }
-.text{
-    font-size: 17px;
+.ion-padding{
+  --background: url('../../../assets/wimbledon.jpg') no-repeat center/cover fixed;
 }
-h3{
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
 
-ion-item{
-    --background: rgb(255, 255, 255);
-}
-  ion-label {
-    margin-right: 15px;
-    font-weight:bold;
-  }
-  ion-text {
-    margin-left: 15px;
-  }
-  ion-button {
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
-  ion-input, select, textarea{
-    -moz-border-radius: 50px;
-    -webkit-border-radius: 50px;
-    border-radius: 10px;
-    //margin-bottom: 10px;  
-    background-color: rgb(243, 238, 192);
-    //margin-top: 17px;
-    text-align: center;
-  }
-  ::placeholder {
-    color: blue;
-    font-style: italic;
+
+ion-input, select, textarea{
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 10px;
+  //margin-bottom: 10px;  
+  background-color: rgb(243, 238, 192);
+  //margin-top: 17px;
+  text-align: center;
 }
