--- a/src/app/pages/facebook/editfacebook/editfacebook.page.scss
+++ b/src/app/pages/facebook/editfacebook/editfacebook.page.scss
@@ -18,7 +18,10 @@
   .danger{
     color: red;
 }
-
+.facebookform{
+  color: #000 ;
+  font-weight: bold;
+}
 ion-input, select, textarea{
     -moz-border-radius: 50px;
     -webkit-border-radius: 50px;
