--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -17,12 +17,11 @@
   </ion-header>
 
   <ion-content>
-    <pre *ngIf="auth.userProfile$ | async as profile">
+    <!-- <pre *ngIf="auth.userProfile$ | async as profile">
       <code>{{ profile | json }}</code>
     </pre>
-<!-- <pre *ngIf="auth.authenticationState">
- -->
-    <ion-row *ngIf="auth.authenticationState">
+    <ion-row *ngIf="auth.authenticationState"> -->
+      <ion-row >
       <ion-col size="12">
         <ion-card>
           <ion-card-header>
@@ -89,8 +88,7 @@
           </ion-card-content>
         </ion-card>
       </ion-col>
-    </ion-row>
-    <!--  </pre> -->   
+    </ion-row> 
     <div id="mapid3" class="mapa"></div>
 
   </ion-content>
