Trabajando en mejorar las Listas y sus filtros

--- a/src/app/pages/main-tabs/torneos/torneos.page.html
+++ b/src/app/pages/main-tabs/torneos/torneos.page.html
@@ -21,7 +21,7 @@
           <!--ion-card-title class="ion-text-center">Torneos</ion-card-title-->
 
           <ion-button color="dark" fill="outline" (click)="toggleVisibleFilters()">
-            <ion-icon slot="icon-only" name="menu"></ion-icon>
+            <ion-icon slot="icon-only" name="filter-outline"></ion-icon>
           </ion-button>
           <ion-button color="dark" fill="outline" type="submit">
             <ion-icon slot="icon-only" name="search"></ion-icon>
